# 08-09-2018

Functioning implementation tested on `darwin-amd64`, `freebsd-amd64` and `linux-mipsle`

+ [x] `darwin-amd64` (macOS 10.13)
+ [x] `freebsd-amd64` (FreeNAS 11)
+ [x] `linux-mipsle` (EdgeOS 1.10, ER-X)
+ [x] Runs from secured JSON-based config
+ [x] Supports `A` and `AAAA` record types against the correct API endpoint
+ [x] Error diagnosis on non-200 returns
+ [x] 1s delay between record update attempts (compile time)
+ [x] 300s delay between full loop update attempts (compile time)
+ [x] Scripts for building a release with embedded `BuildVersion`, `BuildDate` and `GitRev` (printed to console at start)

# 09-09-2018

+ [x] Support relocating and renaming `./mbdns.conf` with `--config`

# 23-01-2019

+ [x] Fixed a bug where the API response body would read erroneously on error

# 11-05-2022

+ [x] [docs for the UDM-SE](/doc/udm-se/README.md)
+ [x] added support for linux arm64/aarch64 builds for the UDM-SE
+ [x] rebuilt all `release-1.0.2` binaries with go1.18.1