@@ -1,0 +1,3 @@
+module github.com/rys/mbdns
+
+go 1.18
